--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_WEBSITE_URL=https://hamishw.com
-NEXT_PUBLIC_API_URL=https://api.hamishw.com
+NEXT_PUBLIC_SERVICE_ID=service_zxsb22m
+NEXT_PUBLIC_TEMPLATE_ID=template_af5dctq
+NEXT_PUBLIC_PUBLIC_KEY=xzFKhxbzzJ2Dd9xQF
