stackoverflow svg added

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_WEBSITE_URL=https://hamishw.com
-NEXT_PUBLIC_API_URL=https://api.hamishw.com
+NEXT_PUBLIC_SERVICE_ID=
+NEXT_PUBLIC_TEMPLATE_ID=
+NEXT_PUBLIC_PUBLIC_KEY=
