--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Portfolio site for Charles Hardy",
-  "repository": "https://github.com/HamishMW/portfolio.git",
   "author": "Charles Hardy <charleshardy1225@gmail.com>",
   "devDependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
@@ -37,6 +36,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "buffer-crc32": "^0.2.13",
+    "fd-slicer": "^1.1.0",
     "framer-motion": "^7.1.0",
     "mdx-bundler": "^9.0.1",
     "next": "^12.2.5",
@@ -49,9 +50,6 @@
     "dev": "next dev",
     "build": "next build && next export -o build/",
     "build:storybook": "build-storybook -o build-storybook && node scripts/draco-storybook",
-    "deploy": "aws s3 sync --delete build/ s3://hamish-portfolio-site",
-    "deploy:storybook": "aws s3 sync --delete build-storybook s3://hamish-portfolio-storybook",
-    "deploy:functions": "cd functions && npm run deploy",
     "start": "next start",
     "test": "echo 'write some tests'",
     "storybook": "start-storybook -p 9009 -h localhost"
